# AUSER

./: .gitignore  AGGIORNAMENTI.md  ANAGRAFICASOCI.html  APPUNTI.txt  CALENDARIO.html  CALENDARIO_WEB.html  CHANGELOG.md  ELENCOMEZZI.html  ELENCOOPERATORI.html  ELENCOSERVIZI.html  ELENCOSERVIZI_FUNZIONALITA.txt  ELENCOSOCI.html  ELENCOSOCI_FUNZIONALITA.txt  ELENCO_SERVIZI.html  IMPOSTAZIONI.html  INSTALLAZIONE.md  ISTRUZIONI_AZURE_AD.md  LOGIN.html  NUOVOSERVIZIO.html  OAUTH_SETUP.md  README.md  REPORTCHILOMETRI.html  REPORTGIORNALIERO.html  REPORTSETTIMANALE.html  RIEPILOGOINCASSI.html  RIEPILOGOPAGAMENTI.html  SCHEDASERVIZIO.html  SELEZIONEDATAINCASSI.html  SHAREPOINT_SETUP.md  TRATTEFUORIASTI.html  UTENTI.html  anagraficasoci.css  anagraficasoci.js  app-updater.js  auth-session.js  auth.css  auth.html  auth.js  calendario-web-edit.js  calendario-web.css  (+69 more)
.github/workflows/: release.yml
components/: servizio_card.css  servizio_card.html
docs/: CALENDARIO_WEB.html  calendario-web-edit.js  calendario-web.css  calendario-web.js  calendario.css  config.public.json  index.html
presentazione/: PRESENTAZIONE.html  presentazione.css  presentazione.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: main.rs  sharepoint.rs  supabase.rs
